# noah_motion_system

./: .hgignore  README.txt
firmware/design_tests/ain_test/: read_ain.py
firmware/design_tests/aout_test/: aout_test.ino
firmware/design_tests/pwm_test/: pwm_test.ino
firmware/design_tests/usb_and_dio_test/: data.txt  plot_data.py  usb_and_dio_test.ino  usb_comm.py  usb_timer_test.py  usb_timer_test_ui.py
firmware/design_tests/usb_serial_test/: plot_data.py  usb_timer_test.ui
firmware/noah_controller/: constants.cpp  constants.h  dev_constants.cpp  dev_constants.h  eeprom_config.cpp  eeprom_config.h  eeprom_data.h  estop_monitor.cpp  estop_monitor.h  homing_controller.cpp  homing_controller.h  motion_controller.cpp  motion_controller.h  noah_controller.ino  position_controller.cpp  position_controller.h  rawhid_msg_types.h  stepper.cpp  stepper.h  stepper_pin.h  system_state.cpp  system_state.h  trigger.cpp  trigger.h  velocity_controller.cpp  velocity_controller.h
firmware/system_tests/motor_test/pc/: constants.cpp  constants.h  dynamic_model.cpp  hid.h
firmware/system_tests/rawhid/pc/: CMakeLists.txt  main.cpp
firmware/tests/design_tests/ain_test/: ain_test.ino
firmware/tests/design_tests/trig_test/: trig_test.ino
firmware/tests/design_tests/usb_serial_test/: data.txt  usb_timer_test.py
firmware/tests/system_tests/sw_enable/: sw_enable.ino
hardware/electronics/motion_controller/: BOM.xls  MAXIM-S8.mod  MOUNT_HOLE_4_40.mod  PJRC_SD_CARD.mod  SC-70-6.mod  TE_CONN_DSUB_RA_68.mod  _autosave-motion_controller.kicad_pcb  arduino_nano.lib  arduino_nano.mod  conn_34x2.lib  max4505.bak  max4505.dcm  max4505.lib  max6176aasa.bak  max6176aasa.dcm  mea1d0512sc.bak  mea1d0512sc.dcm  mea1d0512sc.lib  motion_controller-cache.lib  motion_controller.bak  motion_controller.cmp  motion_controller.dsn  motion_controller.kicad_pcb  motion_controller.kicad_pcb-bak  motion_controller.net  motion_controller.pro  motion_controller.sch  motion_controller.ses  nano_multi_func.mod  nc7wz04.lib  nc7wz16.bak  nc7wz16.bck  nc7wz16.dcm  nc7wz16.lib  op07.dcm  op07.lib  pjrc_sd_card.lib  ssr_dc_6pin.bak  ssr_dc_6pin.dcm  ssr_dc_6pin.lib
hardware/electronics/motion_controller/gerber_v0p1_r1/: motion_controller-B_Cu.gbl  motion_controller-B_Mask.gbs  motion_controller-B_SilkS.gbo  motion_controller-Edge_Cuts.gbr  motion_controller-F_Cu.gtl  motion_controller-F_Mask.gts  motion_controller-F_SilkS.gto  motion_controller.drl
hardware/mechanics/electronics_mount/acrylic_cover_plates/: lower_cover_plate.dxf  main_plate.dxf  upper_cover_plate.dxf
hardware/mechanics/electronics_mount/bulkhead_connector_plate/: bulkhead_connector_plate.dxf
hardware/mechanics/electronics_mount/main_plate/: cable_tie_holder.dxf  finned_heat_sink.dxf  main_plate.dxf  motion_controller_pcb.dxf
hardware/mechanics/electronics_mount/mdf_main_plate_backing/: mdf_main_plate_backing.dxf
hardware/mechanics/electronics_mount/mdf_switch_plate_backing/: mdf_switch_plate_backing.dxf
hardware/mechanics/electronics_mount/power_supply_plate/: power_supply_plate.dxf
hardware/mechanics/electronics_mount/power_switch_plate/: power_switch_plate.dxf
hardware/mechanics/gantry/force_sensor_mount/: force_sensor_to_model_1.dxf  force_sensor_to_model_2.dxf  sherline_toolling_plate.dxf  (+1 more)
hardware/mechanics/gantry_mounting_frame/: BOM.xlsx
libs/devel/: CMakeLists.txt  cmd_line_app.cpp  cmd_line_app.hpp  configuration.cpp  constants.cpp  controller.cpp  create_test_trajectory.py  devel_test.cpp  main.cpp  motion_config.cpp  motion_config.hpp  motion_constants.cpp  motion_constants.hpp  motion_controller.cpp  motion_controller.hpp  outscan_data.cpp  outscan_data.hpp  rawhid_device.cpp  rawhid_device.hpp  rawhid_msg_types.h  rtn_status.cpp  rtn_status.hpp
mechanics/gantry_and_drive_electronics/: BOM.xlsx
mechanics/gantry_and_drive_electronics/gantry_carriage_plate/: carriage_plate.dxf  gantry_carriage_plate.dxf  gantry_plate.dxf  plate_assembly.dxf
mechanics/mounting_frame/: mounting_frame.dxf
software/: CMakeLists.txt  install.txt
software/apps/cmd_line/: CMakeLists.txt  cmd_line_app.cpp  cmd_line_app.hpp
software/apps/devel/: CMakeLists.txt  devel_test.cpp
software/apps/mcontrol/: CMakeLists.txt  mcontrol.cpp  mcontrol.hpp  mcontrol_help.cpp  mcontrol_help.hpp
software/config/: FT19173.cal  FT8652.cal  config.json
software/examples/bash/: basic_moves  create_trajectories.py  ft_samples.txt  simple_outscan  trajectory1.txt  trajectory2.txt  trajectory3.txt  trajectory4.txt  trajectory5.txt
software/examples/c++/basic/: CMakeLists.txt  basic.cpp  trajectory.txt
software/examples/c++/captive_base/: CMakeLists.txt  main.cpp
software/examples/c++/captive_cos/: CMakeLists.txt  cos_trajectory.cpp  cos_trajectory.hpp  main.cpp
software/examples/c++/captive_joy/: CMakeLists.txt  joy_trajectory.cpp  joy_trajectory.hpp  main.cpp  plot_h5data.py
software/examples/c++/outscan/: basic.cpp
software/examples/c++/socketio/basic/c++/cpp_client/: CMakeLists.txt  main.cpp
software/examples/c++/socketio/basic/node/test-sever/: package.json  test_server.js
software/examples/c++/socketio/basic/node/test-sever/public/: app.js  index.html
software/examples/c++/socketio/basic/node/test-sever/util/: test_client.js
software/libs/atidaq/: CMakeLists.txt  ftconfig.c  sixax.c  sixax.h  util.c  util.h
software/libs/docopt/: CMakeLists.txt
software/libs/mctl/: CMakeLists.txt  command_data.hpp  configuration.cpp  configuration.hpp  constants.cpp  constants.hpp  controller.cpp  controller.hpp  ft_sensor_cal.cpp  ft_sensor_cal.hpp  ft_tool_transform.cpp  ft_tool_transform.hpp  mctl.hpp  msg_utility.cpp  msg_utility.hpp  outscan_data.cpp  outscan_data.hpp  rtn_status.cpp  rtn_status.hpp  trajectory.cpp  trajectory.hpp  trajectory_data.hpp
software/libs/motion/: CMakeLists.txt  configuration.cpp  configuration.hpp  constants.cpp  constants.hpp  controller.cpp  controller.hpp  ft_sensor.cpp  ft_sensor.hpp  ft_sensor_cal.cpp  ft_sensor_cal.hpp  ft_tool_transform.cpp  ft_tool_transform.hpp  rawhid_device.cpp  rawhid_device.hpp
(+169 files in other folders)
